--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,9 +60,23 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/imgs/onboarding-bg.png
+    - assets/imgs/android.png
+    - assets/imgs/ios.png
+    - assets/imgs/creative-tim.png
+    - assets/imgs/now-logo.png
+    - assets/imgs/register-bg.png
+    - assets/imgs/bg-profile.png
+    - assets/imgs/profile-img.jpg
+    - assets/imgs/album-1.jpg
+    - assets/imgs/album-2.jpg
+    - assets/imgs/album-3.jpg
+    - assets/imgs/album-4.jpg
+    - assets/imgs/album-5.jpg
+    - assets/imgs/album-6.jpg
+    - assets/imgs/onboarding-free.png
+    - assets/imgs/invision-white-slim.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
